svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: two-containers
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
